# nebula_project_backend

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
accounting/: admin.py  models.py  urls.py  views.py
accounting/exceptions/: __init__.py  accounts.py  categories.py  transactions.py  transfers.py
accounting/migrations/: 0001_initial.py  0002_account_initial_balance.py  0002_initial.py
accounting/models/: __init__.py  accounts.py  categories.py  shared_accounts.py  transactions.py  transfers.py
accounting/serializers/: __init__.py
accounting/services/: accounts.py  categories.py  transactions.py  transfers.py
accounting/tests/: factories.py
accounting/use_cases/: __init__.py  account_create.py  account_delete.py  account_list.py  account_retrieve.py  account_update.py  category_create.py  category_delete.py  category_list.py  public_account_retrieve.py  public_account_transaction_list.py  transaction_create.py  transaction_delete.py  transaction_list.py  transaction_retrieve.py  transaction_update.py  transfer_create.py  transfer_delete.py  transfer_list.py  transfer_retrieve.py  transfer_update.py
accounting/views/: __init__.py
docs/: Auth.md  Financial Tracking App - Technical requirements.md
exchange_rates/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
nebula_project/: asgi.py  settings.py  urls.py  wsgi.py
notifications/: models.py
telegram_auth/: admin.py  auth.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
(+69 files in other folders)
