[project]
name = "nebula-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-standardized-errors>=0.14.1",
    "factory-boy>=3.3.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "lxml>=5.3.2",
    "pytelegrambotapi>=4.27.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
